--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -122,11 +122,11 @@
       <div class="board-bottom">
         <div class="title" th:text="${notice.getTitle()}"></div><br>
         <div class="content" th:text="${notice.getContent()}"></div>
-        <div sec:authorize="hasRole('ROLE_ADMIN')">
-          <a th:href="@{/board/edit/(id=${notice.getId()})}" class="btn btn-primary">수정</a>
-        </div>
-        <div sec:authorize="hasRole('ROLE_ADMIN')">
-          <a th:href="@{/board/edit/(id=${notice.getId()})}" class="btn btn-danger">글삭제</a>
+        <div class="d-flex justify-content-end">
+          <div sec:authorize="hasRole('ROLE_ADMIN')">
+            <a th:href="@{/board/edit/(id=${notice.getId()})}" class="btn btn-primary">수정</a>
+            <a th:href="@{/board/delete/(id=${notice.getId()})}" class="btn btn-danger">글삭제</a>
+          </div>
         </div>
       </div>
       <div class="board-comment">
