index, structure(onetoone)

--- a/src/main/resources/templates/class/findClass.html
+++ b/src/main/resources/templates/class/findClass.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/search/submit}" th:object="${classDTO}">
+    <form method='post' role="form" th:action="@{/class/submit}" th:object="${classDTO}">
         <div class="py-2">
 
         </div>
