--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -76,7 +76,7 @@
   }
 
   /* 테이블 스타일 */
-  .board-bottom {
+  .board-bottom, .board-comment {
     width: 100%;
     background-color : white;
     padding: 1em;
@@ -130,8 +130,37 @@
         </div>
       </div>
       <div class="board-comment">
+        <div class="row">
+          <!-- Login Form -->
+          <div class="col-md-2">
+            <h3>Login</h3>
+            <form action="/login" method="post">
+              <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" name="username" required>
+              </div>
+              <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+              </div>
+              <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+          </div>
 
+          <!-- Comment Form -->
+          <div class="col-md-8">
+            <h3>Add a Comment</h3>
+            <form action="/submit-comment" method="post">
+              <div class="form-group">
+                <label for="comment">Comment:</label>
+                <textarea class="form-control" id="comment" name="comment" rows="3" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit Comment</button>
+            </form>
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
 </div>
