--- a/src/main/resources/templates/manage/class.html
+++ b/src/main/resources/templates/manage/class.html
@@ -90,5 +90,5 @@
 </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="/js/class.js"></script>
+<script src="/js/manage/class.js"></script>
 </html>
