--- a/src/main/resources/templates/admin/teacherList.html
+++ b/src/main/resources/templates/admin/teacherList.html
@@ -89,5 +89,5 @@
 </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="/js/teacherList.js"></script>
+<script src="/js/admin/teacherList.js"></script>
 </html>
