--- a/src/main/resources/templates/admin/teacherList.html
+++ b/src/main/resources/templates/admin/teacherList.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Scheduler</title>
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <style>
         input[type="checkbox"] {
             width: 1.5em;
