--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -136,7 +136,7 @@
             <td th:text="${comment.getCommentAuthor()}"></td>
             <td th:text="${comment.getComment()}" th:data="${comment.getCommentId()}"></td>
             <td th:text="${#dates.format(comment.getCreationTimeStamp(), 'yyyy-MM-dd HH:mm')}"></td>
-            <th><a class="btn btn-primary btn-danger delete-button">삭제</a></th>
+            <td class="badge">Primary</td>
           </tr>
         </table>
         </div>
