--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -75,7 +75,7 @@
   }
 
   /* 테이블 스타일 */
-  .board-bottom, .board-comment {
+  .board-bottom, .board-comment, .comment-form {
     width: 100%;
     background-color : white;
     padding: 1em;
@@ -85,6 +85,7 @@
   .comment{
     padding: 0.3em;
   }
+
 
 </style>
 <body>
@@ -129,32 +130,35 @@
           </div>
         </div>
       </div>
-      <div class="board-comment">
-        <div class="comment">
-        <table>
-          <tr th:each="comment: ${commentList}">
-            <td th:text="${comment.getCommentAuthor()}"></td>
-            <td th:text="${comment.getComment()}" th:data="${comment.getCommentId()}"></td>
-            <td th:text="${#dates.format(comment.getCreationTimeStamp(), 'yyyy-MM-dd HH:mm')}"></td>
-            <td class="badge">Primary</td>
-          </tr>
-        </table>
-        </div>
-        <div class="comment-form">
+      <table class="board-comment">
+        <thead>
+        <tr>
+          <th scope="col" style="width: 5%"></th>
+          <th scope="col" style="width: 10%"></th>
+          <th scope="col" style="width: 60%"></th>
+          <th scope="col" style="width: 15%"></th>
+          <th scope="col" style="width: 10%"></th>
+        </tr>
+        </thead>
+        <tr th:each="comment: ${commentList}">
+          <th th:text="${commentStat.count}"></th>
+          <th th:text="${comment.getCommentAuthor()}"></th>
+          <th th:text="${comment.getComment()}"></th>
+          <th th:text="${#dates.format(comment.getCreationTimeStamp(), 'yyyy-MM-dd HH:mm')}"></th>
+          <th class="badge text-bg-secondary" th:id="${comment.getId()}" th:data="${notice.getId()}">X</th>
+      </table>
+      <div class="comment-form">
           <!-- Login Form -->
           <div class="row">
             <!-- Username and Password Section -->
             <div class="col-md-2">
               <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <label for="username"></label><input type="text" class="form-control" id="username" name="username" placeholder="이름" required>
               </div>
               <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <label for="password"></label><input type="password" class="form-control" id="password" name="password" placeholder="비밀번호" required>
               </div>
             </div>
-
             <!-- Comment Section -->
             <div class="col-md-10">
               <div class="form-group">
@@ -170,11 +174,11 @@
             </div>
           </div>
       </div>
-      </div>
     </div>
   </div>
 </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/js/board/notice.js"></script>
+<script src="/js/board/toggleContent.js"></script>
 </html>
