error( add Student, sign up)

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -64,9 +64,9 @@
                 <!--이름-->
                 <label for="name"></label>
                 <input class="form-control" id="name" placeholder="이름 입력해 주세요"
-                       th:errorclass="field-error" th:field="*{name}"
+                       th:errorclass="field-error" th:field="*{teacherName}"
                        type="text">
-                <div class="field-error" th:errors="*{name}"></div>
+                <div class="field-error" th:errors="*{teacherName}"></div>
 
                 <!--이메일-->
                 <label for="email"></label>
